objects/Amendment_Metadata__mdt.object
<CustomObject>
    <description>This is used to list the objects and fields that can be updated in a change order process and denote which types of change each field corresponds to.</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>The API name of the field. Don&apos;t forget the __c if it&apos;s a custom field.</description>
        <label>Field Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>The API name of the standard or custom object in Salesforce.</description>
        <label>Object Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <description>This is the field or the relationship path to the Quote Id. A master/detail or lookup will have a field named Quote__c  on the object but something that&apos;s not directly related will need to have the relationship path noted (i.e. SomeObject__r.Quote__c).</description>
        <label>Quote Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is used as a flag in code to know if this object/field should be used or not. Gives us the ability to turn this field on/off without a deployment.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerFee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a change to this object/field is a dealer fee change.</description>
        <label>isDealerFee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEnergy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a change to this object/field is a energy change.</description>
        <label>isEnergy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a change to this object/field is a price change.</description>
        <label>isPrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a change to this object/field is a product change.</description>
        <label>isProduct</label>
        <type>Checkbox</type>
    </fields>
    <label>Amendment Metadata</label>
    <pluralLabel>Amendment Metadata</pluralLabel>
</CustomObject>